Fix strange header dropdown sizing on Safari

--- a/src/Layout/Header/Header.scss
+++ b/src/Layout/Header/Header.scss
@@ -54,7 +54,7 @@
 			}
 
 			&:hover {
-				.tab-children { opacity: 1;	height: fit-content; padding: 1em; }
+				.tab-children { opacity: 1;	padding: 1em; }
 				&:after { width: 100%; opacity: 1; }
 			}
 
@@ -63,12 +63,11 @@
 				top: 2.25em;
 				left: -1em;
 				z-index: 10;
-				height: 0; padding: 0 1em;
+				padding: 0 1em;
 
 				display: flex;
 				flex-direction: column;
 				align-items: flex-start;
-				overflow: hidden;
 
 				& > .tab-children-text { @include v-gap(0.5em); }
 
